--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p>Este es un deploy de prueba rapido</p>
         </div>
       </div>
     </section>
