--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="http://www.twitter.com/pablovalor" target="_blank">
           <p>Twitter</p>
         </a>
       </li>
